--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "start": "webpack --mode development",
-    "build": "webpack --mode production",    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --env development",
+    "build": "webpack --env production",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
